--- a/index.html
+++ b/index.html
@@ -130,6 +130,7 @@
         <section class="section-page section-contact">
             <h2 class="title-section">Cotizar</h2>
             <form action="" class="form-landing-page" method="post">
+                <ul id="errors"></ul>
                 <div class="input-field">
                     <input class="input-form" type="text" name="name_contact" required placeholder="Nombre y apellido">
                 </div>
@@ -150,7 +151,7 @@
                 <div class="input-field">
                     <textarea class="textarea-form" name="commit_contact" cols="30" rows="10" placeholder="Déjanos tus comentarios..." minlength="10" maxlength="200"></textarea>
                 </div>
-                <button class="btns btn-enviar" type="submit" value="submit" name="btn_enviar">Enviar y cotizar</button>
+                <button class="btns btn-enviar" type="button" name="btn_enviar">Enviar y cotizar</button>
             </form>
         </section>
         <!-- End Contacto -->
@@ -160,7 +161,7 @@
         <h6 class="copy">Diseñado y Desarrollado por <a href="http://linkedin.com/in/cesaravilesc/" target="_blank">César Avilés - CEO & Founder at Escalab Academy</a> - Copyright 2022</h6>
     </footer>
     <!-- End Footer -->
-
+    <script src="js/index.js"></script>
     <!-- HTML5 DESDE CERO | César Avilés | https://github.com/grafiaviles/master-class-escalab-landing-page -->
 </body>
 
